Додав Home Work 10 task update 5

--- a/Home Work/JS Home Work 10/Task 6/index-1.html
+++ b/Home Work/JS Home Work 10/Task 6/index-1.html
@@ -8,11 +8,6 @@
     <title>Document</title>
 </head>
 <body>
-
-<div>
-    <a href="./sessionsListPage.html" target="_blank">Переглянути лист сесій</a>
-</div>
-
-<script src="index.js"></script>
+<script src="task-1.js"></script>
 </body>
 </html>
