Додав Home Work 10 task 10

--- a/Home Work/JS Home Work 10/Task 10/index-10.html
+++ b/Home Work/JS Home Work 10/Task 10/index-10.html
@@ -8,6 +8,14 @@
     <title>Document</title>
 </head>
 <body>
-<script src="task-1.js"></script>
+
+<div id="arrayView"></div>
+<div>
+    <button id="prev">prev</button>
+    <button id="next">next</button>
+</div>
+
+
+<script src="task-10.js"></script>
 </body>
 </html>
