Додав Home Work 11 update task 2

--- a/Home Work/JS Home Work 11/Task 2/index-2.html
+++ b/Home Work/JS Home Work 11/Task 2/index-2.html
@@ -12,7 +12,7 @@
             margin: 12px;
             padding: 12px;
             display: grid;
-            grid-template-columns: 30vw 30vw 30vw;
+            grid-template-columns: 32vw 32vw 32vw;
         }
         .listDishes {
             margin: 12px;
@@ -30,7 +30,7 @@
         }
 
 
-        .ulIngredient, .olInstruction, .ulTags, .divParameters {
+        .ulIngredient, .olInstruction, .ulTags, .divParameters, .ulMealType {
             display: flex;
             justify-content: flex-start;
             align-items: self-start;
@@ -45,13 +45,8 @@
 
         .olInstruction>li{
             padding-left: 12px;
-
-
         }
 
-        .ulTags>li{
-            text-decoration: none;
-        }
     </style>
 </head>
 <body>
