--- a/Home Work/JS Home Work 11/Task 2/index-2.html
+++ b/Home Work/JS Home Work 11/Task 2/index-2.html
@@ -9,15 +9,15 @@
     <link href="style.css">
     <style>
         .divContainer {
-            margin: 12px;
-            padding: 12px;
+            margin: 8px;
+            padding: 8px;
             display: grid;
             grid-template-columns: 32vw 32vw 32vw;
         }
 
         .listDishes {
-            margin: 12px;
-            padding: 12px;
+            margin: 8px;
+            padding: 8px;
             background-color: rgba(250, 235, 215, 0.5);
             border-radius: 8px;
             border: solid 2px;
@@ -27,7 +27,6 @@
 
         h3 {
             font-size: 26px;
-            text-align: center;
         }
 
 
@@ -37,13 +36,21 @@
             align-items: self-start;
             flex-direction: column;
             border-radius: 4px;
-            border: solid 1px;
+            border: solid 1px rgba(248, 69, 2, 0.81);
             margin: 12px;
             background-color: #dddddd;
             padding: 12px 28px;
         }
 
+        .ulIngredient, .olInstruction, .ulTags, .ulMealType {
+            color: rgba(248, 69, 2, 0.81);
+            font-size: 20px;
+        }
 
+        li {
+            color: black;
+            font-size: 16px;
+        }
 
         .olInstruction > li {
             padding-left: 12px;
